--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ __pycache__/
 *.pyc
 *.pyo
 .DS_Store
+comp_ibov.csv
+cotacoes.parquet
+dados_di.csv
+divida_pib.csv
+dolar.csv
+inflacao.csv
+noticias.csv
+tickers.csv
